# BPE-knockout

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: git-tag_to_pypi.yml
data/compressed/: celex_morphology_de.txt
doc/: history.md
knockout/auxiliary/: measuring.py  robbert_tokenizer.py
knockout/datahandlers/: hf_corpora.py  holdout.py  morphology.py  wordfiles.py
knockout/knockout/: hf.py  knockout.py
knockout/visualisation/: graphing.py  timing.py
lib/RobBERT-training/: setup.py  train.sh  training.py
lib/RobBERT-training/trainer/data/jit/: datamodule.py  run.sh
lib/sbpe/: learn_bpe.py
src/auxiliary/: bytemapping.py  config.py  measuring.py  paths.py  robbert_tokenizer.py  tokenizer_interface.py
src/bpe_knockout/: __init__.py
src/bpe_knockout/_data/base-models/bpe-40k_oscar-de-clean/: BPE_from_words_oscar-de.json  merges.txt  vocab.json
src/bpe_knockout/_data/base-models/bpe-40k_oscar-en-clean/: BPE_from_words_oscar-en.json  merges.txt  vocab.json
src/bpe_knockout/_data/base-models/bpe-40k_oscar-nl-clean/: merges.txt  tokenizer.json  vocab.json
src/bpe_knockout/_data/morphology/: celex_morphology_de.txt  celex_morphology_en.txt
src/bpe_knockout/_lib/sbpe/: learn_bpe.py
src/bpe_knockout/auxiliary/: bytemapping.py  robbert_tokenizer.py  timing.py  tokenizer_interface.py
src/bpe_knockout/datahandlers/: bpetrainer.py  hf_corpora.py  holdout.py  morphology.py  unicode.py  wordfiles.py
src/bpe_knockout/knockout/: config.py  core.py  hf.py  inspection.py
src/bpe_knockout/model/: auto.py  config.py  graph.py  inspection.py  tokeniser.py  vocabulariser.py
src/bpe_knockout/project/: config.py  paths.py
src/bpe_knockout/util/: holdout.py  storage.py  tokenizer_interface.py  unicode.py  wordfiles.py
src/bpe_knockout/util/datahandlers/: bpetrainer.py  hf_corpora.py  holdout.py  wordfiles.py
src/bpe_knockout/util/project/: config.py
src/bpek/auxiliary/: robbert_tokenizer.py
src/bpek/datahandlers/: hf_corpora.py  holdout.py  morphology.py
src/bpek/knockout/: knockout.py
src/datahandlers/: bpetrainer.py  elex.py  hf_corpora.py  morphology.py  wordfiles.py
src/knockout/: hf.py  knockout.py
src/project/: config.py
src/visualisation/: diff.py  graphing.py  printing.py  timing.py  trees.py
tst/: bpetrainer.py  bytemapping.py  configs.py  draft.py  hf_corpora.py  holdout.py  knockout.py  main.py  morphology.py  preamble.py
tst/_lib/RobBERT/src/: evaluate_zeroshot_wordlist.py  preprocess_conll2002_ner.py  preprocess_lassy_ud.py  preprocess_util.py  preprocess_wordlist_mask.py  train_config.py  wordlistfiller.py
tst/_lib/RobBERT_training/: train.sh
tst/_lib/RobBERT_training/src/: setup.py  training.py
tst/_lib/RobBERT_training/src/trainer/datahandler/jit/: dataloader.py
tst/_lib/RobBERT_training/src/trainer/modules/: base.py
tst/corpora/: hf_corpora.py
tst/experiments/: knockout.py  languagemodels.py
tst/tests/: bpetrainer.py  bytemapping.py  hf_corpora.py  holdout.py  test_huggingface_interface.py  test_knockout.py  test_load_save.py
tst/tokenisation/: measuring.py  ngram.py  robbert_tokenizer.py
tst/visualisation/: diff.py  graphing.py  trees.py  viterbi.py
