[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bpe_knockout"
version = "2025.12.10"  # Don't forget to update __version__ too.
requires-python = ">= 3.10"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "Implementation of BPE-knockout, a morphologically informed post-processing step for BPE tokenisers."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["tokenizers", "NLP", "BPE", "byte-pair encoding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers >= 4.17.0",
    "tokenizers >= 0.13.2",
    "datasets >= 2.10.1",
    "torch",  # We only need torch for using DataLoader in type annotations. It's required by transformers anyway.

    "requests",
    "langcodes",
    "language_data",
    "numpy >= 1.23.5",
    "tqdm"
]

# These are not optional, but if you have these packages as editable installs, you don't want to let pip install them again!
[project.optional-dependencies]
github = [
    "tktkt[github] @ git+https://github.com/bauwenst/TkTkT",
    "modest[github] @ git+https://github.com/bauwenst/MoDeST",
    "fiject        @ git+https://github.com/bauwenst/fiject"
]
tests = [
    "scipy"
]

# Include morphological data and tokeniser files.
[tool.setuptools.package-data]
"*" = ["*.txt", "*.json"]
