[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bpe_knockout"
version = "2026.03.13"  # Don't forget to update __version__ too.
requires-python = ">= 3.9"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "Implementation of BPE-knockout, a morphologically informed post-processing step for BPE tokenisers."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["tokenizers", "NLP", "BPE", "byte-pair encoding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # No dependency on 'transformers' because it's crazy heavy.
    "tokenizers >= 0.13.2",

    "langcodes",
    "language_data",
    "numpy >= 1.23.5",
    "tqdm"
]

[project.optional-dependencies]
full = [  # These are not optional, but if you have these packages as editable installs, you don't want to let pip install them again!
    "tktkt[github] @ git+https://github.com/bauwenst/TkTkT",
    "modest[github] @ git+https://github.com/bauwenst/MoDeST",
]
tests = [
    "scipy",
    "fiject",
    "transformers >= 4.17.0",
    "torch",  # We only need torch for using DataLoader in type annotations. It's required by transformers anyway.
    "datasets >= 2.10.1",
    "requests",
]

# Include morphological data and tokeniser files.
[tool.setuptools.package-data]
"*" = ["*.txt", "*.json"]
