[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bpe_knockout"
version = "v2026.03.24"  # Don't forget to update __version__ too.
requires-python = ">= 3.9"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "Implementation of BPE-knockout, a morphologically informed post-processing step for BPE tokenisers."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["tokenizers", "NLP", "BPE", "byte-pair encoding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    # No dependency on 'transformers' because it's crazy heavy.
    "tokenizers >= 0.13.2",

    "langcodes",
    "language_data",
    "numpy >= 1.23.5",
    "tqdm"
]

[project.optional-dependencies]
all = [  # All my other packages, on PyPI.
    "tktkt[all]",
    "modest_bauwenst[all]"
]
github = [  # All other packages not on PyPI yet.
]
tests = [
    "scipy",
    "fiject",
    "transformers >= 4.17.0",
    "torch",  # We only need torch for using DataLoader in type annotations. It's required by transformers anyway.
    "datasets >= 2.10.1",
    "requests",
]

[project.urls]
Repository = "https://github.com/bauwenst/BPE-knockout"
"Bug Tracker" = "https://github.com/bauwenst/BPE-knockout/issues"

# Include morphological data and tokeniser files.
[tool.setuptools.package-data]
"*" = ["*.txt", "*.json"]
